# cmph

./: .gitignore  ALGORITHMS.t2t  AUTHORS  BDZ.t2t  BMZ.t2t  BRZ.t2t  CHD.t2t  CHM.t2t  COMPARISON.t2t  CONCEPTS.t2t  CONFIG.t2t  COPYING  CZECH.t2t  ChangeLog  DOC.css  Doxyfile  EXAMPLES.t2t  FAQ.t2t  FCH.t2t  FOOTER.t2t  GOOGLEANALYTICS.t2t  GPERF.t2t  LOGO.html  Makefile.am  NEWSLOG.t2t  README  README.md  README.t2t  TABLE1.t2t  TABLE4.t2t  TABLE5.t2t  TABLEBRZ1.t2t  TABLEBRZ2.t2t  TABLEBRZ3.t2t  acinclude.m4  aclocal.m4  cmph.pc  cmph.pc.in  cmph.spec  cmph.vcproj  (+8 more)
.devcontainer/: Dockerfile  devcontainer.json
cdb/: Makefile.am  cdb.h  cmph_cdb.cc  cmph_cdb.h  cmph_cdb_make.cc  cmph_cdb_structs.h
cxxmph/: .cmph_hash_map.h.swp  .mphtable.cc.swp  .mphtable.h.swp  .ycm_extra_conf.py  Makefile  Makefile.am  Makefile.in  MurmurHash2.h  MurmurHash3.cpp  URLS1k  benchmark.cc  benchmark.h  bfcr_map.h  bfcr_map_test.cc  bm_common.cc  bm_common.h  bm_index.cc  bm_map.cc  bm_numbers.cc  bm_urls.cc  cmph_hash_function.h  cmph_hash_map.h  cmph_hash_map_test  cmph_hash_map_test.cc  cxxmph.cc  cxxmph_hash.h  debruijn_index.h  debruijn_index_test.cc  dense_hash_map_test.cc  dummy_map.h  dummy_map_test.cc  flatten_iterator.h  flatten_iterator_test.cc  hollow_iterator.h  hollow_iterator_test.cc  iterator_first.h  macros.h  map_tester.cc  map_tester.h  map_tester_test.cc  (+43 more)
cxxmph/.deps/: cmph_hash_map_test.Po
cxxmph/.libs/: cmph_hash_map_test
docs/: bdz.html  bmz.html  brz.html  chd.html  chm.html  comparison.html  concepts.html  examples.html  faq.html  fch.html  gperf.html  index.html  newslog.html
examples/: Makefile  Makefile.am  Makefile.in  file_adapter_ex2.c  small_set_ex4.c  small_set_test.c  struct_vector_adapter_ex3.c  vector_adapter_ex1.c
examples/.deps/: file_adapter_ex2.Po  vector_adapter_ex1.Po
figs/brz/: brz_temporegressao.eps
m4/: acinclude.m4  cxx0x.m4  largefile.m4  spoon.m4
man/: cmph.1
papers/: bmz_tr004_04.ps  bmz_wea2005.ps
portage/dev-libs/cmph/: ChangeLog  cmph-0.4.ebuild  cmph-0.8.ebuild  cmph-0.9.ebuild
src/: Makefile  Makefile.am  Makefile.in  MurmurHash2.h  bdz.c  bdz.h  bdz.lo  bdz_ph.c  bdz_ph.h  bitbool.c  bitbool.h  bitbool.lo  bm_numbers.c  bmz.c  bmz.h  bmz.lo  bmz8.c  bmz8.h  bmz8.lo  bmz_structs.h  brz.c  brz.h  brz.lo  brz_structs.h  buffer_entry.c  buffer_entry.h  buffer_entry.lo  buffer_manage.c  buffer_manager.c  buffer_manager.h  buffer_manager.lo  chd.c  chd_ph.c  chd_structs_ph.h  chm.c  chm.h  chm.lo  cmph  cmph.c  cmph.h  (+53 more)
src/.deps/: bdz.Plo  bitbool.Plo  bmz.Plo  bmz8.Plo  brz.Plo  buffer_entry.Plo  buffer_manager.Plo  chm.Plo  cmph.Plo  cmph_structs.Plo  djb2_hash.Plo  fch.Plo  fch_buckets.Plo  fnv_hash.Plo  graph.Plo  hash.Plo  jenkins_hash.Plo  main.Po  sdbm_hash.Plo  vqueue.Plo  vstack.Plo  wingetopt.Po
src/.libs/: cmph  libcmph.lai  libcmph.so.0.0.0  lt-cmph
tests/: Makefile.am  compressed_seq_tests.c  graph_tests.c  mphf_fingerprint_tests.c  mphf_tests.c  packed_mphf_tests.c  select_tests.c
tex/bdz/: bdz.bib  bdz.tex  introduction.tex  makefile
tex/bdz/figs/: overviewinternal3g.eps  overviewinternal3g.fig
tex/chd/: chd.bib  chd.tex  introduction.tex  makefile
vldb/ingles/: algorithms.tex  applications.tex  conclusions.tex  experimentalresults.tex  introduction.tex  references.bib  relatedwork.tex
vldb/ingles/figs/: grafordering2.fig  grafsearching2.fig  grafsearchingncv.fig  minimalperfecthash-ph-mph.fig
vldb/pt/: algorithms.tex  applications.tex  conclusions.tex  experimentalresults.tex  introduction.tex  makefile  references.bib  relatedwork.tex  vldb.tex
vldb/pt/figs/: brz.fig  brz.ps  grafordering.fig  grafordering3.fig  grafsearching.fig  minimalperfecthash-ph-mph.ps
vldb07/: acknowledgments.tex  analyticalresults.tex  appendix.tex  conclusions.tex  costhashingbuckets.tex  determiningb.tex  diskaccess.tex  experimentalresults.tex  introduction.tex  makefile  partitioningthekeys.tex  performancenewalgorithm.tex  references.bib  relatedwork.tex  searching.tex  terminology.tex  thealgorithm.tex  thedataandsetup.tex  vldb.tex
vldb07/figs/: brz-partitioning.fig  brz-partitioningfabiano.fig  brz.fig  brzfabiano.fig
