noinst_PROGRAMS = vector_adapter_ex1 file_adapter_ex2 struct_vector_adapter_ex3 small_set_ex4

AM_CPPFLAGS = -I$(srcdir)/../src/

vector_adapter_ex1_LDADD   = ../src/libcmph.la
vector_adapter_ex1_SOURCES = vector_adapter_ex1.c

file_adapter_ex2_LDADD     = ../src/libcmph.la
file_adapter_ex2_SOURCES   = file_adapter_ex2.c

struct_vector_adapter_ex3_LDADD     = ../src/libcmph.la
struct_vector_adapter_ex3_SOURCES   = struct_vector_adapter_ex3.c

small_set_ex4_LDADD     = ../src/libcmph.la
small_set_ex4_SOURCES   = small_set_ex4.c
