noinst_PROGRAMS = graph_tests packed_mphf_tests mphf_tests

INCLUDES = -I../src/

graph_tests_SOURCES = graph_tests.c
graph_tests_LDADD = ../src/libcmph.la

packed_mphf_tests_SOURCES = packed_mphf_tests.c
packed_mphf_tests_LDADD = ../src/libcmph.la

mphf_tests_SOURCES = mphf_tests.c
mphf_tests_LDADD = ../src/libcmph.la
